fix styles on mobile

--- a/sass/claim/claim.module.scss
+++ b/sass/claim/claim.module.scss
@@ -148,11 +148,15 @@ $list-text-font-size-large: 1.25rem;
 
 @mixin large_button() {
     position:relative;
-	width: 55%;
+	width: 40%;
 	display:flex;
 	justify-content: center;
     padding: 0;
     color: #FFFFFF;
+
+    @media (min-width: $bp-small-2) {  
+        width: 45%;
+    }
 
     @media (min-width: $bp-med-2) {  
         width: 60%;
